crates/module-system/sov-modules-macros/tests/integration/trybuild/rpc/expose_rpc_associated_type_not_static.stderr
error[E0310]: the parameter type `D` may not live long enough
  --> tests/integration/trybuild/rpc/expose_rpc_associated_type_not_static.rs:88:13
   |
88 |         impl<S, D: Data> QueryModule<S, D>
   |             ^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             the parameter type `D` must be valid for the static lifetime...
   |             ...so that the type `ApiState<S, QueryModule<S, D>>` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> tests/integration/trybuild/rpc/expose_rpc_associated_type_not_static.rs:87:9
   |
87 |         #[rpc_gen(client, server, namespace = "queryModule")]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `::jsonrpsee::proc_macros::rpc` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider adding an explicit lifetime bound
   |
88 |         impl<S, D: Data + 'static> QueryModule<S, D>
   |                         +++++++++

error[E0310]: the parameter type `D` may not live long enough
  --> tests/integration/trybuild/rpc/expose_rpc_associated_type_not_static.rs:88:13
   |
88 |         impl<S, D: Data> QueryModule<S, D>
   |             ^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             the parameter type `D` must be valid for the static lifetime...
   |             ...so that the type `D` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> tests/integration/trybuild/rpc/expose_rpc_associated_type_not_static.rs:87:9
   |
87 |         #[rpc_gen(client, server, namespace = "queryModule")]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `::jsonrpsee::proc_macros::rpc` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider adding an explicit lifetime bound
   |
88 |         impl<S, D: Data + 'static> QueryModule<S, D>
   |                         +++++++++

error[E0308]: mismatched types
  --> tests/integration/trybuild/rpc/expose_rpc_associated_type_not_static.rs:72:22
   |
72 |                 .set(10, state)
   |                  --- ^^ expected `&D`, found integer
   |                  |
   |                  arguments to this method are incorrect
   |
   = note: expected reference `&D`
                   found type `{integer}`
note: method defined here
  --> $WORKSPACE/crates/module-system/sov-modules-api/src/containers/value.rs
   |
   |     pub fn set<Vq, Writer>(&mut self, value: &V, state: &mut Writer) -> Result<(), Writer::Error>
   |            ^^^

error[E0310]: the parameter type `D` may not live long enough
  --> tests/integration/trybuild/rpc/expose_rpc_associated_type_not_static.rs:87:9
   |
87 |         #[rpc_gen(client, server, namespace = "queryModule")]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         the parameter type `D` must be valid for the static lifetime...
   |         ...so that the type `D` will meet its required lifetime bounds
   |
   = note: this error originates in the attribute macro `rpc_gen` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider adding an explicit lifetime bound
   |
88 |         impl<S, D: Data + 'static> QueryModule<S, D>
   |                         +++++++++
